# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_fpv_test_tools_suite")
load("//bazel:verilog.bzl", "verilog_elab_test")

package(default_visibility = ["//visibility:private"])

# protocl check of Isolator

verilog_library(
    name = "isolate_axi_protocol_fv_check",
    srcs = ["isolate_axi_protocol_fv_check.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_isolate_mgr",
        "//amba/rtl:br_amba_axi_isolate_sub",
        "//fpv/lib:fv_4phase_handshake",
    ],
)

# AXI4-Lite Default Target

verilog_library(
    name = "br_amba_axil_default_target_fpv_monitor",
    srcs = ["br_amba_axil_default_target_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_axil_default_target",
    ],
)

verilog_elab_test(
    name = "br_amba_axil_default_target_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_axil_default_target_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_axil_default_target_test_suite",
    tools = {
        "jg": "br_amba_axil_default_target_fpv.jg.tcl",
    },
    top = "br_amba_axil_default_target",
    deps = [":br_amba_axil_default_target_fpv_monitor"],
)

# AXI4-Lite Default Target

verilog_library(
    name = "br_amba_axi_default_target_fpv_monitor",
    srcs = ["br_amba_axi_default_target_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_default_target",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_default_target_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_axi_default_target_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_axi_default_target_test_suite",
    params = {
        "AxiIdWidth": [
            "1",
            "3",
        ],
        "SingleBeat": [
            "0",
            "1",
        ],
    },
    tools = {
        "jg": "br_amba_axi_default_target_fpv.jg.tcl",
    },
    top = "br_amba_axi_default_target",
    deps = [":br_amba_axi_default_target_fpv_monitor"],
)

# Bedrock-RTL AXI4 to AXI4-Lite Bridge

verilog_library(
    name = "br_amba_axi2axil_fpv_monitor",
    srcs = ["br_amba_axi2axil_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_axi2axil",
        "//fpv/lib:fv_fifo",
    ],
)

verilog_elab_test(
    name = "br_amba_axi2axil_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_axi2axil_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_axi2axil_test_suite",
    elab_opts = [
        "-parameter MaxOutstandingReqs 4",
    ],
    tools = {
        "jg": "br_amba_axi2axil_fpv.jg.tcl",
    },
    top = "br_amba_axi2axil",
    deps = [":br_amba_axi2axil_fpv_monitor"],
)

# Bedrock-RTL AXI4-Lite 1:2 Split

verilog_library(
    name = "br_amba_axil_split_fpv_monitor",
    srcs = ["br_amba_axil_split_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_axil_split",
    ],
)

verilog_elab_test(
    name = "br_amba_axil_split_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_axil_split_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_axil_split_test_suite",
    params = {
        "NumBranchAddrRanges": [
            "1",
            "2",
            "3",
        ],
    },
    tools = {
        "jg": "br_amba_axil_split_fpv.jg.tcl",
    },
    top = "br_amba_axil_split",
    deps = [":br_amba_axil_split_fpv_monitor"],
)

# AXI4 Timing Slice

verilog_library(
    name = "br_amba_axi_timing_slice_fpv_monitor",
    srcs = ["br_amba_axi_timing_slice_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_timing_slice",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_timing_slice_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_axi_timing_slice_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_axi_timing_slice_test_suite",
    tools = {
        "jg": "br_amba_axi_timing_slice_fpv.jg.tcl",
    },
    top = "br_amba_axi_timing_slice",
    deps = [":br_amba_axi_timing_slice_fpv_monitor"],
)

# AXI4-Lite Timing Slice

verilog_library(
    name = "br_amba_axil_timing_slice_fpv_monitor",
    srcs = ["br_amba_axil_timing_slice_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_axil_timing_slice",
    ],
)

verilog_elab_test(
    name = "br_amba_axil_timing_slice_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_axil_timing_slice_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_axil_timing_slice_test_suite",
    tools = {
        "jg": "br_amba_axil_timing_slice_fpv.jg.tcl",
    },
    top = "br_amba_axil_timing_slice",
    deps = [":br_amba_axil_timing_slice_fpv_monitor"],
)

# Bedrock-RTL AXI4-Lite to APB Bridge

verilog_library(
    name = "br_amba_axil2apb_fpv_monitor",
    srcs = ["br_amba_axil2apb_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_axil2apb",
    ],
)

verilog_elab_test(
    name = "br_amba_axil2apb_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_axil2apb_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_axil2apb_test_suite",
    tools = {
        "jg": "br_amba_axil2apb_fpv.jg.tcl",
    },
    top = "br_amba_axil2apb",
    deps = [":br_amba_axil2apb_fpv_monitor"],
)

# Bedrock-RTL APB Timing Slice

verilog_library(
    name = "br_amba_apb_timing_slice_fpv_monitor",
    srcs = ["br_amba_apb_timing_slice_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_apb_timing_slice",
    ],
)

verilog_elab_test(
    name = "br_amba_apb_timing_slice_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_apb_timing_slice_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_apb_timing_slice_test_suite",
    tools = {
        "jg": "",
    },
    top = "br_amba_apb_timing_slice",
    deps = [":br_amba_apb_timing_slice_fpv_monitor"],
)

# Bedrock-RTL ATB Funnel

verilog_library(
    name = "br_amba_atb_funnel_fpv_monitor",
    srcs = ["br_amba_atb_funnel_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_atb_funnel",
    ],
)

verilog_elab_test(
    name = "br_amba_atb_funnel_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_atb_funnel_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_atb_funnel_test_suite",
    tools = {
        "jg": "br_amba_atb_funnel_fpv.jg.tcl",
    },
    top = "br_amba_atb_funnel",
    deps = [":br_amba_atb_funnel_fpv_monitor"],
)

# Bedrock-RTL AXI4-Lite MSI Generator

verilog_library(
    name = "br_amba_axil_msi_fpv_monitor",
    srcs = ["br_amba_axil_msi_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_axil_msi",
    ],
)

verilog_elab_test(
    name = "br_amba_axil_msi_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_axil_msi_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_axil_msi_test_suite",
    tools = {
        "jg": "br_amba_axil_msi_fpv.jg.tcl",
    },
    top = "br_amba_axil_msi",
    deps = [":br_amba_axil_msi_fpv_monitor"],
)

# Bedrock-RTL AXI Upstream (Manager) Isolator

verilog_library(
    name = "br_amba_axi_isolate_mgr_fpv_monitor",
    srcs = ["br_amba_axi_isolate_mgr_fpv_monitor.sv"],
    deps = [
        ":isolate_axi_protocol_fv_check",
        "//amba/rtl:br_amba_axi_isolate_mgr",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_isolate_mgr_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_axi_isolate_mgr_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_axi_isolate_mgr_test_suite",
    elab_opts = [
        "-parameter MaxOutstanding 4",
    ],
    params = {
        "MaxAxiBurstLen": [
            "1",
            "256",
        ],
    },
    tools = {
        "jg": "br_amba_axi_isolate_mgr_fpv.jg.tcl",
    },
    top = "br_amba_axi_isolate_mgr",
    deps = [":br_amba_axi_isolate_mgr_fpv_monitor"],
)

# Bedrock-RTL AXI Downstream (Subordinate) Isolator

verilog_library(
    name = "br_amba_axi_isolate_sub_fpv_monitor",
    srcs = ["br_amba_axi_isolate_sub_fpv_monitor.sv"],
    deps = [
        ":isolate_axi_protocol_fv_check",
        "//amba/rtl:br_amba_axi_isolate_sub",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_isolate_sub_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_axi_isolate_sub_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_axi_isolate_sub_test_suite",
    elab_opts = [
        "-parameter AwMaxOutstanding 4",
        "-parameter ArMaxOutstanding 4",
        "-parameter AwAxiIdCount 2",
        "-parameter ArAxiIdCount 2",
    ],
    params = {
        "MaxAxiBurstLen": [
            "1",
            "256",
        ],
        "AwAxiIdWidth": [
            "1",
            "2",
        ],
        "ArAxiIdWidth": [
            "1",
            "2",
        ],
        "UseDynamicFifoForReadTracker": [
            "0",
            "1",
        ],
        "StaticPerIdReadTrackerFifoDepth": [
            "1",
            "2",
        ],
    },
    tools = {
        "jg": "br_amba_axi_isolate_sub_fpv.jg.tcl",
    },
    top = "br_amba_axi_isolate_sub",
    deps = [":br_amba_axi_isolate_sub_fpv_monitor"],
)

# Bedrock-RTL AXI Demux

verilog_library(
    name = "br_amba_axi_demux_fpv_monitor",
    srcs = ["br_amba_axi_demux_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_demux",
        "//fpv/lib:fv_fifo",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_demux_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    # elab complains about: use of undefined macro 'JS3_OUT_OF_ORDER'
    # needs to disable those spurious warnings for regression
    tags = ["manual"],
    tool = "slang",
    deps = [":br_amba_axi_demux_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_axi_demux_test_suite",
    elab_opts = [
        "-parameter AwAxiIdWidth 2",
        "-parameter ArAxiIdWidth 2",
    ],
    params = {
        "NumSubordinates": [
            "2",
            "3",
        ],
        "SingleIdOnly": [
            "0",
            "1",
        ],
    },
    tools = {
        "jg": "br_amba_axi_demux_fpv.jg.tcl",
    },
    top = "br_amba_axi_demux",
    deps = [":br_amba_axi_demux_fpv_monitor"],
)

# Bedrock-RTL AXI4 Shrinker

verilog_library(
    name = "br_amba_axi_shrinker_fpv_monitor",
    srcs = ["br_amba_axi_shrinker_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_shrinker",
        "//fpv/lib:fv_fifo",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_shrinker_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_axi_shrinker_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_axi_shrinker_test_suite",
    elab_opts = [
        "-parameter WideDataWidth 128",
        "-parameter MaxOutstandingReqs 4",
        "-parameter IdWidth 3",
    ],
    params = {
        "NarrowDataWidth": [
            "32",
            "16",
            "8",
        ],
    },
    tools = {
        "jg": "br_amba_axi_shrinker_fpv.jg.tcl",
    },
    top = "br_amba_axi_shrinker",
    deps = [":br_amba_axi_shrinker_fpv_monitor"],
)

# Bedrock-RTL AXI4-Lite Write Arbiter

verilog_library(
    name = "br_amba_axil_write_arbiter_fpv_monitor",
    srcs = ["br_amba_axil_write_arbiter_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_axil_write_arbiter",
        "//fpv/lib:fv_fifo",
    ],
)

verilog_elab_test(
    name = "br_amba_axil_write_arbiter_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    deps = [":br_amba_axil_write_arbiter_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_amba_axil_write_arbiter_test_suite",
    params = {
        "MaxOutstandingWrites": [
            "1",
            "2",
        ],
        "NumInitiators": [
            "2",
            "3",
        ],
    },
    tools = {
        "jg": "br_amba_axil_write_arbiter_fpv.jg.tcl",
    },
    top = "br_amba_axil_write_arbiter",
    deps = [":br_amba_axil_write_arbiter_fpv_monitor"],
)

# Bedrock-RTL APB Demux Select-Onehot

verilog_library(
    name = "br_apb_demux_select_onehot_fpv_monitor",
    srcs = ["br_apb_demux_select_onehot_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_apb_demux_select_onehot",
    ],
)

verilog_elab_test(
    name = "br_apb_demux_select_onehot_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    top = "br_apb_demux_select_onehot_fpv_monitor",
    deps = [":br_apb_demux_select_onehot_fpv_monitor"],
)

# Single-downstream case checks degenerate routing with no retiming.
br_verilog_fpv_test_tools_suite(
    name = "br_apb_demux_select_onehot_num_downstream1",
    elab_opts = [
        "-parameter NumDownstreams 1",
        "-parameter NumRetimeStages '\"'\"'{0}",
    ],
    tools = {
        "jg": "br_apb_demux_select_onehot_fpv.jg.tcl",
    },
    top = "br_apb_demux_select_onehot",
    deps = [":br_apb_demux_select_onehot_fpv_monitor"],
)

# Three-downstream case checks mixed retiming across selected routes.
br_verilog_fpv_test_tools_suite(
    name = "br_apb_demux_select_onehot_num_downstream3",
    elab_opts = [
        "-parameter NumDownstreams 3",
        "-parameter NumRetimeStages '\"'\"'{0,1,2}",
    ],
    tools = {
        "jg": "br_apb_demux_select_onehot_fpv.jg.tcl",
    },
    top = "br_apb_demux_select_onehot",
    deps = [":br_apb_demux_select_onehot_fpv_monitor"],
)

# Four-downstream case checks wider routing with uneven retiming.
br_verilog_fpv_test_tools_suite(
    name = "br_apb_demux_select_onehot_num_downstream4",
    elab_opts = [
        "-parameter NumDownstreams 4",
        "-parameter NumRetimeStages '\"'\"'{0,1,2,3}",
    ],
    tools = {
        "jg": "br_apb_demux_select_onehot_fpv.jg.tcl",
    },
    top = "br_apb_demux_select_onehot",
    deps = [":br_apb_demux_select_onehot_fpv_monitor"],
)

# Bedrock-RTL Address-Decoding APB Demux

verilog_library(
    name = "br_apb_demux_fpv_monitor",
    srcs = ["br_apb_demux_fpv_monitor.sv"],
    deps = [
        "//amba/rtl:br_apb_demux",
    ],
)

verilog_elab_test(
    name = "br_apb_demux_fpv_monitor_elab_test",
    opts = ["--ignore-unknown-modules"],
    tool = "slang",
    top = "br_apb_demux_fpv_monitor",
    deps = [":br_apb_demux_fpv_monitor"],
)

# No-default case checks explicit decode, normalization, masking, and local miss errors.
br_verilog_fpv_test_tools_suite(
    name = "br_apb_demux_no_default",
    elab_opts = [
        "-parameter NumDownstreams 2",
        "-parameter HasDefaultDownstream 0",
        "-parameter NumRetimeStages '\"'\"'{1,0}",
        "-parameter RequirePowerOfTwoAlignedRanges '\"'\"'{1,0}",
        "-parameter NormalizeDownstreamAddress '\"'\"'{1,0}",
        "-parameter UpstreamAddrMask 4094",
        "-parameter DownstreamAddrMask '\"'\"'{2047,4095}",
    ],
    tools = {
        "jg": "br_apb_demux_fpv.jg.tcl",
    },
    top = "br_apb_demux",
    deps = [":br_apb_demux_fpv_monitor"],
)

# Default case checks explicit and default decode with normalization and masking.
br_verilog_fpv_test_tools_suite(
    name = "br_apb_demux_with_default",
    elab_opts = [
        "-parameter NumDownstreams 2",
        "-parameter HasDefaultDownstream 1",
        "-parameter NumRetimeStages '\"'\"'{0,0}",
        "-parameter RequirePowerOfTwoAlignedRanges '\"'\"'{1}",
        "-parameter NormalizeDownstreamAddress '\"'\"'{1}",
        "-parameter UpstreamAddrMask 4093",
        "-parameter DownstreamAddrMask '\"'\"'{2047,4095}",
    ],
    tools = {
        "jg": "br_apb_demux_fpv.jg.tcl",
    },
    top = "br_apb_demux",
    deps = [":br_apb_demux_fpv_monitor"],
)

# Disabled decode-error case requires a selected route and checks the alternate response mux.
br_verilog_fpv_test_tools_suite(
    name = "br_apb_demux_select_onehot_no_decode_error",
    elab_opts = [
        "-parameter NumDownstreams 2",
        "-parameter EnableDecodeError 0",
        "-parameter NumRetimeStages '\"'\"'{0,1}",
    ],
    tools = {
        "jg": "br_apb_demux_select_onehot_fpv.jg.tcl",
    },
    top = "br_apb_demux_select_onehot",
    deps = [":br_apb_demux_select_onehot_fpv_monitor"],
)
