# Copyright 2024-2025 The Bedrock-RTL Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_elab_and_lint_test_suite")

package(default_visibility = ["//visibility:public"])

verilog_library(
    name = "br_amba_pkg",
    srcs = ["br_amba_pkg.sv"],
)

verilog_library(
    name = "br_amba_axil2apb",
    srcs = ["br_amba_axil2apb.sv"],
    deps = [
        ":br_amba_pkg",
        "//arb/rtl:br_arb_rr",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

verilog_library(
    name = "br_amba_axi_timing_slice",
    srcs = ["br_amba_axi_timing_slice.sv"],
    deps = [
        ":br_amba_pkg",
        "//flow/rtl:br_flow_reg_both",
        "//flow/rtl:br_flow_reg_fwd",
        "//flow/rtl:br_flow_reg_rev",
        "//macros:br_asserts_internal",
    ],
)

verilog_library(
    name = "br_amba_axil_timing_slice",
    srcs = ["br_amba_axil_timing_slice.sv"],
    deps = [
        ":br_amba_pkg",
        "//flow/rtl:br_flow_reg_both",
    ],
)

verilog_library(
    name = "br_amba_axi_default_target",
    srcs = ["br_amba_axi_default_target.sv"],
    deps = [
        ":br_amba_pkg",
        "//counter/rtl:br_counter_incr",
        "//flow/rtl:br_flow_reg_fwd",
        "//macros:br_asserts_internal",
        "//macros:br_unused",
    ],
)

verilog_library(
    name = "br_amba_axil_default_target",
    srcs = ["br_amba_axil_default_target.sv"],
    deps = [
        ":br_amba_axi_default_target",
        ":br_amba_pkg",
    ],
)

verilog_library(
    name = "br_amba_axil_split",
    srcs = ["br_amba_axil_split.sv"],
    deps = [
        ":br_amba_pkg",
        "//arb/rtl:br_arb_rr",
        "//counter/rtl:br_counter",
        "//flow/rtl:br_flow_reg_both",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

verilog_library(
    name = "br_amba_atb_funnel",
    srcs = ["br_amba_atb_funnel.sv"],
    deps = [
        ":br_amba_pkg",
        "//flow/rtl:br_flow_mux_rr_stable",
        "//macros:br_asserts_internal",
    ],
)

verilog_library(
    name = "br_amba_axil_msi",
    srcs = ["br_amba_axil_msi.sv"],
    deps = [
        ":br_amba_pkg",
        "//counter/rtl:br_counter_decr",
        "//flow/rtl:br_flow_mux_rr_stable",
        "//flow/rtl:br_flow_reg_both",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

verilog_library(
    name = "br_amba_axi2axil",
    srcs = ["br_amba_axi2axil.sv"],
    deps = [
        ":br_amba_pkg",
        "//amba/rtl/internal:br_amba_axi2axil_core",
        "//macros:br_asserts_internal",
    ],
)

verilog_library(
    name = "br_amba_apb_timing_slice",
    srcs = ["br_amba_apb_timing_slice.sv"],
    deps = [
        ":br_amba_pkg",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axil2apb_test_suite",
    params = {
        "AddrWidth": [
            "32",
            "40",
        ],
        "DataWidth": [
            "32",
            "64",
        ],
    },
    deps = [":br_amba_axil2apb"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_timing_slice_test_suite",
    params = {
        "AddrWidth": [
            "12",
            "32",
            "40",
        ],
        "DataWidth": [
            "32",
            "64",
            "128",
        ],
    },
    deps = [":br_amba_axi_timing_slice"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_timing_slice_fwd_test_suite",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["32"],
        "AWSliceType": ["0"],
        "WSliceType": ["0"],
        "ARSliceType": ["0"],
        "RSliceType": ["0"],
        "BSliceType": ["0"],
    },
    deps = [":br_amba_axi_timing_slice"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_timing_slice_rev_test_suite",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["32"],
        "AWSliceType": ["1"],
        "WSliceType": ["1"],
        "ARSliceType": ["1"],
        "RSliceType": ["1"],
        "BSliceType": ["1"],
    },
    deps = [":br_amba_axi_timing_slice"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_timing_slice_full_test_suite",
    params = {
        "AddrWidth": ["32"],
        "DataWidth": ["32"],
        "AWSliceType": ["2"],
        "WSliceType": ["2"],
        "ARSliceType": ["2"],
        "RSliceType": ["2"],
        "BSliceType": ["2"],
    },
    deps = [":br_amba_axi_timing_slice"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axil_timing_slice_test_suite",
    params = {
        "AddrWidth": [
            "32",
            "40",
        ],
        "DataWidth": [
            "32",
            "64",
        ],
    },
    deps = [":br_amba_axil_timing_slice"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_default_target_test_suite",
    params = {
        "DataWidth": [
            "32",
            "64",
        ],
        "DecodeError": [
            "0",
            "1",
        ],
        "SingleBeat": [
            "0",
            "1",
        ],
        "AxiIdWidth": [
            "1",
            "8",
        ],
    },
    deps = [":br_amba_axi_default_target"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axil_default_target_test_suite",
    params = {
        "DataWidth": [
            "32",
            "64",
        ],
        "DecodeError": [
            "0",
            "1",
        ],
    },
    deps = [":br_amba_axil_default_target"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axil_split_test_suite",
    params = {
        "AddrWidth": [
            "32",
            "40",
        ],
        "DataWidth": [
            "32",
            "64",
        ],
        "MaxOutstandingReads": [
            "4",
            "16",
        ],
        "MaxOutstandingWrites": [
            "4",
            "16",
        ],
        "NumBranchAddrRanges": [
            "1",
            "2",
        ],
    },
    deps = [":br_amba_axil_split"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_atb_funnel_test_suite",
    params = {
        "NumSources": [
            "2",
            "4",
        ],
        "DataWidth": [
            "32",
            "64",
        ],
        "UserWidth": [
            "1",
            "8",
        ],
    },
    deps = [":br_amba_atb_funnel"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axil_msi_test_suite",
    params = {
        "DataWidth": [
            "32",
            "64",
        ],
        "NumInterrupts": [
            "2",
            "8",
        ],
        "NumMsiDestAddr": [
            "1",
            "2",
        ],
        "ThrottleCntrWidth": [
            "2",
            "4",
        ],
    },
    deps = [":br_amba_axil_msi"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi2axil_test_suite",
    params = {
        "AddrWidth": [
            "32",
            "40",
        ],
        "DataWidth": [
            "32",
            "64",
        ],
    },
    deps = [":br_amba_axi2axil"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_apb_timing_slice_test_suite",
    params = {
        "AddrWidth": [
            "12",
            "32",
        ],
    },
    deps = [":br_amba_apb_timing_slice"],
)

verilog_library(
    name = "br_amba_axi_isolate_sub",
    srcs = ["br_amba_axi_isolate_sub.sv"],
    deps = [
        ":br_amba_pkg",
        "//amba/rtl/internal:br_amba_iso_ds_fsm",
        "//amba/rtl/internal:br_amba_iso_resp_tracker",
        "//amba/rtl/internal:br_amba_iso_wdata_align",
        "//flow/rtl:br_flow_reg_fwd",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
        "//macros:br_unused",
        "//pkg:br_math_pkg",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_isolate_sub_test_suite",
    params = {
        "AddrWidth": ["64"],
        "DataWidth": ["128"],
        "IdWidth": ["8"],
        "AxiIdCount": [
            "1",
            "128",
        ],
        "MaxOutstanding": ["128"],
        "MaxAxiBurstLen": [
            "1",
            "256",
        ],
    },
    deps = [":br_amba_axi_isolate_sub"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_isolate_sub_axilite_test_suite",
    params = {
        "AddrWidth": ["40"],
        "DataWidth": ["64"],
        "IdWidth": ["1"],
        "AxiIdCount": ["1"],
        "MaxOutstanding": ["16"],
        "MaxAxiBurstLen": ["1"],
    },
    deps = [":br_amba_axi_isolate_sub"],
)

verilog_library(
    name = "br_amba_axi_isolate_mgr",
    srcs = ["br_amba_axi_isolate_mgr.sv"],
    deps = [
        ":br_amba_pkg",
        "//amba/rtl/internal:br_amba_iso_req_tracker",
        "//amba/rtl/internal:br_amba_iso_us_fsm",
        "//amba/rtl/internal:br_amba_iso_wdata_align",
        "//flow/rtl:br_flow_reg_fwd",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
        "//pkg:br_math_pkg",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_amba_axi_isolate_mgr_test_suite",
    params = {
        "AddrWidth": ["64"],
        "DataWidth": ["128"],
        "IdWidth": ["8"],
        "MaxOutstanding": [
            "128",
            "2",
        ],
        "MaxAxiBurstLen": [
            "1",
            "256",
        ],
    },
    deps = [":br_amba_axi_isolate_mgr"],
)
